# Infinity

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/resources/: icon.xcf  icon0.xcf  parallaxleft.tga  parallaxright.tga  symbol.pgf
app/src/: animation.h  animations.cpp  animations.h  application.cpp  application.h  backgroundview.cpp  backgroundview.h  blockallocator.cpp  blockallocator.h  buttonarbiter.cpp  buttonarbiter.h  buttonevent.cpp  buttonevent.h  buttontransition.cpp  buttontransition.h  circularbuffer.h  colouredrectangle.cpp  colouredrectangle.h  compatibilityconfig.cpp  compatibilityconfig.h  compatibilitymodule.cpp  compatibilitymodule.h  configscreen.cpp  configscreen.h  creditsscreen.cpp  creditsscreen.h  errorscreen.cpp  errorscreen.h  event.cpp  event.h  eventhandler.h  eventsource.cpp  eventsource.h  exitscreen.cpp  exitscreen.h  firework.cpp  firework.h  flashingrectangle.cpp  flashingrectangle.h  font.cpp  (+89 more)
cmake/: psp-toolchain.cmake
firmware/: CMakeLists.txt
firmware/arkcompat/: CMakeLists.txt
firmware/bootloader/: CMakeLists.txt  exports.exp
firmware/bootloader/include/: kernel_helper.h
firmware/bootloader/src/: intercept.S  main.c
firmware/compat_interface/: CMakeLists.txt
firmware/compat_interface/include/: compat_interface.h
firmware/infinityboot/: CMakeLists.txt  LICENSE  exports.exp
firmware/infinityboot/src/: main.c
firmware/infinityctrl/: CMakeLists.txt  README.md
firmware/infinityctrl/include/: libinfinity.h
firmware/infinityctrl/src/: infinity_ver.S  libinfinity.c  main.c
firmware/mecompat/: CMakeLists.txt
firmware/mecompat/src/: main.c
firmware/procompat/: CMakeLists.txt  linkfile.l
firmware/procompat/src/: crt0.S  main.c  rebootex_conf.h
firmware/reboot/: 661mapfile.txt  CMakeLists.txt  exports.exp
firmware/reboot/include/: reboot.h
firmware/reboot/src/: reboot.c  utility.c  utility.h
firmware/rebootex/: CMakeLists.txt  linkfile.l
firmware/rebootex/include/: rebootex_interface.h
firmware/rebootex/src/: btcnf.c  btcnf.h  btcnfpatch.c  btcnfpatch.h  compatibility.c  compatibility.h  crt0.S  kprintf.c  kprintf.h  lfatpatch.c  lfatpatch.h  libc.c  loadcorepatch.c  loadcorepatch.h  main.c  patch.h  psp_uart.c  psp_uart.h  syscon.c  syscon.h  sysreg.c  sysreg.h  utility.c  utility.h
firmware/recovery/: CMakeLists.txt  linkfile.l
firmware/recovery/src/: crt0.S  main.c
kernel_helper/: CMakeLists.txt  exports.exp
kernel_helper/include/: kernel_helper.h
kernel_helper/src/: main.c
kexploit/: CMakeLists.txt
kexploit/include/: kexploit.h
kexploit/src/: cache.cpp  cache.h  findproc.cpp  findproc.h  k660.cpp  k660.h  main.cpp
libconfig/: CMakeLists.txt  exports.exp
libconfig/include/: config.h
libconfig/src/: config.c  main.c
sdk/: CMakeLists.txt  readme.txt
sdk/include/: pspinit.h  psploadcore.h
stubs/: CMakeLists.txt
stubs/memlmd/: CMakeLists.txt  semaphore.S
stubs/memlmd/include/: memlmd.h
stubs/modulemgr/: CMakeLists.txt  ModuleMgrForUser.S
stubs/modulemgr/include/: modulemgr.h
stubs/netifhandle/: CMakeLists.txt  sceNetIfhandle_lib.S
stubs/netifhandle/include/: netifhandle.h
stubs/power/: CMakeLists.txt  scePower.S
stubs/syscon/: CMakeLists.txt  sceSyscon_driver.S
stubs/syscon/include/: syscon.h
stubs/vshbridge/: CMakeLists.txt  sceVshBridge.S
stubs/vshbridge/include/: vshbridge.h
tools/: CMakeLists.txt
tools/bin2cpp/: bin2cpp.py
tools/hashgen/: hashgen.py
tools/psppack/: psppack.py
tools/psptools/: pack_kernel_module.py  pack_user_fw_module.py
tools/psptools/psptool/: kirk.py  pack.py  prx.py
tools/psptools/psptool/prxtypes/: common.py  type2.py  type6.py  type9.py
utils/: CMakeLists.txt
utils/include/: pspmacro.h
